# MSc

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  config.json  config.toml  env.sh  lx_env.sh  tag_datasets.C  test.db3
.git.bfg-report/2021-07-13/10-56-37/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.github/workflows/: cmake.yml
Lc_pi/: CMakeLists.txt  resonant_state_analysis.C
TMVA/: .gitattributes  .gitignore  .snakemake_logs  GetPunzi.C  Snakefile  TMVAClassification.C  TMVAClassificationApplication.C  TMVAnalyse.C  get_punzi.C  makefile
TMVA/KS/: ks.py
TMVA/feature_sets/: compare_sets.py  list_feats.py  set1.json  set11.json  set12.json  set13.json  set14.json  set15.json  set16.json  set17.json  set18.json  set19.json  set2.json  set20.json  set21.json  set3.json  set4.json  set5.json  set6.json
TMVA/punzi_analysis/: .gitignore  all_punzi.csv  best_punzi.py
TMVA/runs/run_fs10_hp1/: TMVA.root  TMVApp.root  feature_settings.json
TMVA/runs/run_fs10_hp1/dataset/weights/: TMVAClassification_BDTB.class.C  TMVAClassification_BDTB.weights.xml  TMVAClassification_BDTD.class.C  TMVAClassification_BDTD.weights.xml  TMVAClassification_BDTF.class.C  TMVAClassification_BDTF.weights.xml  TMVAClassification_BDTG.class.C  TMVAClassification_BDTG.weights.xml  TMVAClassification_DNN_CPU.class.C  TMVAClassification_DNN_CPU.weights.xml  TMVAClassification_LD.class.C  TMVAClassification_LD.weights.xml  TMVAClassification_MLP.class.C  TMVAClassification_MLP.weights.xml  (+2 more)
TMVA/runs/run_fs10_hp1/punzi/: punzi.csv
TMVA/runs/run_fs1_hp1/: TMVA.root  TMVApp.root
TMVA/runs/run_fs1_hp1/punzi/: punzi.csv
TMVA/runs/run_fs2_hp1/: TMVA.root  TMVApp.root
TMVA/runs/run_fs2_hp1/punzi/: punzi.csv
TMVA/runs/run_fs3_hp1/: TMVA.root  TMVApp.root
TMVA/runs/run_fs3_hp1/punzi/: punzi.csv
TMVA/runs/run_fs4_hp1/: TMVA.root
TMVA/runs/run_fs5_hp1/: TMVA.root
TMVA/runs/run_fs6_hp1/: TMVA.root  TMVApp.root
TMVA/runs/run_fs6_hp1/punzi/: punzi.csv
TMVA/runs/run_fs7_hp1/: TMVA.root  TMVApp.root  feature_settings.json  get_punzi.C
TMVA/runs/run_fs7_hp1/punzi/: punzi.csv
TMVA/runs/run_fs8_hp1/: TMVA.root  feature_settings.json
TMVA/runs/run_fs9_hp1/: TMVA.root  TMVApp.root  feature_settings.json
TMVA/runs/run_fs9_hp1/punzi/: punzi.csv
TMVA/scripts/: run_application.sh  run_classification.sh  run_punzi.sh
TMVA_phase/: .gitignore  CMakeLists.txt  Makefile  TMVAClassification.C  TMVAClassification_federica.C  TMVAClassification_lp.C  output_TMVA.root  use.C
TMVA_phase/config/: model_params.yml
TMVA_phase/dataset/plots/: variables_id_c1.eps  variables_id_c2.eps
TMVA_phase/dataset/weights/: TMVAClassification_federica_BDT.class.C  TMVAClassification_federica_BDT.weights.xml  TMVAClassification_federica_BDTG.class.C  TMVAClassification_federica_BDTG.weights.xml
TMVA_phase/include/: DatabaseExpo.hpp  GetPunzi.hpp  classification.hpp
TMVA_phase/src/: CMakeLists.txt  DatabaseExpo.C  TMVAClassification.C  TMVAClassificationApplication.C  application.C  classification.C  exploreOutput.C  punzi_fom.C  tmva.C
TMVApp/: .gitignore  TMVAClassificationApplication.C  TMVAnalyse.C  get_punzi.C  makefile
database/: get_feats.py  init_db.sh  searches.db
database/init_db/: CMakeLists.txt  a.json  main.cpp  out.csv  statements.h
database/sql_scripts/: .gitignore  ExploreRunFeatures.sql  ExploreRunFeatures.sql.met  ExploreRunMethods.sql.met  Get_Features.sql  Get_Features.sql.met  Get_Known_Feature_Sets.sql.met  Get_Known_Methods.sql.met  Get_Methods.sql  Get_Used_Methods.sql  Get_Used_Methods.sql.met
feature_analysis/: .gitignore  CMakeLists.txt  Makefile  analyse_features  draw.C  draw.h  features.C  features.h  features.root  getBranches.py  main.C  pch.h  run_with_root.C  search.C  search.h  select_features.C  select_features.h  user_settings.json
feature_analysis/get_ranges/: get_ranges.C
feature_analysis/include/: draw.h  main.h  pch.h  search.h  select_features.h
feature_analysis/select_branches/: getBranchNames.py  global_branches.txt  particle_branches.txt
feature_analysis/src/: CMakeLists.txt  draw.C  features.C  features.h  get_masses.C  main.C  search.C  search.h  select_features.C
feature_analysis/src/select_branches/: DecayTree.h  global_branches.txt
features/: features.C
fit/: MarksBG.cxx  MarksBG.h  PowerLaw.cxx  PowerLaw.h  TMVAnalyse.C  XicstBG.cxx  XicstBG.h  bkg_fit.C  fit.C  makefile  modErf.cxx  modErf.h  sig_fit.C
include/: lhcbStyle.h  pch.h  settings_selection.hpp
lib/cmake/SQLiteCpp/: SQLiteCppTargets.cmake
set_masses/: CMakeLists.txt  set_masses  set_masses.C
share/pkgconfig/: yaml-cpp.pc
small_datasets/: getnew.C  small_MC.root.REMOVED.git-id  small_WS1.root.REMOVED.git-id  small_WS2.root.REMOVED.git-id  small_WS3.root.REMOVED.git-id  use_small_ds.sh
training/RootTMVA/: TMVAClassification  TMVAClassification.C  TMVA_out.root  makefile  origin
utils/: CMakeLists.txt  Makefile  converter
utils/decay_length/src/: converter.cpp
utils/decay_tl_converter/: CMakeLists.txt  converter
utils/decay_tl_converter/src/: CMakeLists.txt  converter.cpp  main.cpp
utils/include/: converter.hpp
utils/settings_selection/: CMakeLists.txt
utils/settings_selection/src/: CMakeLists.txt  main.cpp  settings_selection.cpp  settings_selection.hpp
utils/sqlite/: CMakeLists.txt  singleton_db.cpp  singleton_db.hpp
utils/src/: CMakeLists.txt  converter.cpp
v1/TMVA_phase/: .gitignore  CMakeLists.txt  train.json  train.toml
v1/TMVA_phase/include/: from_sql.hpp  from_toml.hpp
v1/TMVA_phase/src/: CMakeLists.txt  GetPunzi.C  classification.C  evaluation.C  from_sql.C  from_toml.C  tmva.C
v1/database/sql_scripts/: ExploreRunMethods.sql  Get_Known_Feature_Sets.sql  Get_Known_Methods.sql
v1/feature_analysis/: user_settings.json
v1/feature_analysis/include/: draw.h
v1/feature_analysis/src/: lhcbStyle.C  main.C  select_features.C
v1/feature_analysis/src/select_branches/: getBranchNames.py  global_branches.txt  particle_branches.txt
ws/: comp.C  feature_comp.C  feature_settings.json
(+102 files in other folders)
